# varnishotel

./: .gitignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: GENERAL.yaml
.github/workflows/: ci.yml  codeql_rust.yaml  docs.yaml  release.yaml  release_please.yaml
contrib/varnish/: default.vcl
contrib/webplayground/: Dockerfile
contrib/webplayground/etc/nginx/conf.d/: default.conf
contrib/webplayground/usr/share/nginx/html/: index.html  robots.txt
contrib/webplayground/usr/share/nginx/html/esi/: index.html
contrib/webplayground/usr/share/nginx/html/esi/includes/: header.html  main.html  widget.html
docs/: index.md  quickstart.md
docs/design/: semconv.md  trace_naming.md  varnishlogreceiver.md
libs/varnishotel_semconv/: Cargo.toml  README.md
libs/varnishotel_semconv/src/: lib.rs
libs/varnishotel_varnishtrace/: Cargo.toml  README.md
libs/varnishotel_varnishtrace/src/: lib.rs
src/: main.rs
src/varnishlogreceiver/: mod.rs
varnishotel/: Cargo.toml
varnishotel/src/: main.rs
varnishotel_semconv/: Cargo.toml  README.md
varnishotel_semconv/src/: lib.rs
