[package]
name = "varnishotel"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "varnishotel"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
clap = { version = "4.5.47", features = ["derive"] }
opentelemetry = { version = "0.30.0"}
opentelemetry_sdk = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
