[package]
name = "varnishotel"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "varnishotel"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
clap = { version = "4.5.53", features = ["derive"] }
opentelemetry = { version = "0.31.0"}
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
regex = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
varnishotel-semconv = { path = "varnishotel_semconv" }
