[project]
name = "varnishotel"
classifiers = ["Private :: Do Not Upload"]
version = "0"
requires-python = ">=3.13"

# Dependencies should NOT use "Version Matching clauses" (matching operator `==`)
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-matching
# This project uses 'uv pip compile' from https://github.com/astral-sh/uv
# which will ensure the resolved versions of both direct and indirect dependencies are pinned.
# Therefore we only need to constrain versions when some ranges
# of dependency versions are not compatible.
dependencies = [
  # runtime
  # development
]

[dependency-groups]
docs = [
    "mike>=2.1.3",
    "mkdocs-callouts>=1.14.1",
    "mkdocs-material>=9.5.46",
    "mkdocs>=1.6.1",
]

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
pythonpath = [
  "."
]

# See https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
show_traceback = true

# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]