[package]
name = "varnishotel"
description = "Varnish OTEL collector"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/thomasklinger1234/varnishotel"

[dependencies]
anyhow = { version = "1" }
clap = { version = "4.5.47", features = ["derive"] }
opentelemetry = { version = "0.30.0"}
opentelemetry_sdk = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
varnishotel_semconv = { path = "../libs/varnishotel_semconv" }
varnishotel_varnishtrace = { path = "../libs/varnishotel_varnishtrace" }

[[bin]]
name = "varnishotel"
path = "src/main.rs"
